--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ server.sessionTimeout=30
 
 server.contextPath=/demo/
 server.servletPath=/APIs/
+
+# rabbitmq
+mq.rabbit.host=127.0.0.1
+mq.rabbit.port=15672
+mq.rabbit.virtualHost=/
+mq.rabbit.username=kong
+mq.rabbit.password=123
