--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ server.sessionTimeout=30
 server.contextPath=/demo/
 server.servletPath=/APIs/
 
-# rabbitmq
+# rabbitmq (使用的spring-amqp，port默认5672，此处写5672会自动连接到rabbit-server:15672)
 mq.rabbit.host=127.0.0.1
-mq.rabbit.port=15672
+mq.rabbit.port=5672
 mq.rabbit.virtualHost=/
 mq.rabbit.username=kong
 mq.rabbit.password=123
