spring-boot amqp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ server.servletPath=/APIs/
 mq.rabbit.host=127.0.0.1
 mq.rabbit.port=5672
 mq.rabbit.virtualHost=/
-mq.rabbit.username=kong
-mq.rabbit.password=123
+mq.rabbit.username=guest
+mq.rabbit.password=guest
