--- a/pom.xml
+++ b/pom.xml
@@ -27,22 +27,49 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- spring boot: actuator提供对应用系统本身的自省功能 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- springboot: rabbitmq -->
+        <!-- spring boot: amqp -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
-        <!-- springboot：test -->
+        <!-- spring boot：test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- spring boot：mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+        <!-- 热部署 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- db -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
         </dependency>
 
         <!-- swagger2 -->
@@ -57,6 +84,13 @@
             <version>2.2.2</version>
         </dependency>
 
+        <!-- rabbitmq-console -->
+        <dependency>
+            <groupId>augtek.rabbitmq</groupId>
+            <artifactId>rabbitmq-console</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
         <!-- common -->
         <dependency>
             <groupId>junit</groupId>
@@ -67,13 +101,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.28</version>
-        </dependency>
-
-        <!-- rabbitmq-console -->
-        <dependency>
-            <groupId>augtek.rabbitmq</groupId>
-            <artifactId>rabbitmq-console</artifactId>
-            <version>1.0</version>
         </dependency>
 
     </dependencies>
