--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # Spring Boot最大的特色是“约定优先配置”。但是有时需要特定配置，application.properties会覆盖默认约定。
 ##
 # dataSource config
-spring.datasource.url=jdbc:mysql://localhost/smat
-spring.datasource.username=smat
+spring.datasource.url=jdbc:mysql://localhost:3306/helloWorld?useSSL=false&amp;characterEncoding=UTF-8
+spring.datasource.username=helloWorld
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
@@ -11,7 +11,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.address=127.0.0.1
 server.port=8080
 server.sessionTimeout=30
-
 server.contextPath=/demo/
 server.servletPath=/APIs/
 
@@ -21,3 +20,8 @@ mq.rabbit.port=5672
 mq.rabbit.virtualHost=/
 mq.rabbit.username=guest
 mq.rabbit.password=guest
+
+# mybatis
+mybatis.type-aliases-package=com.kyh.model
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+#mybatis.type-handlers-package=
