--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,11 @@
 ##
 # Spring Boot最大的特色是“约定优先配置”。但是有时需要特定配置，application.properties会覆盖默认约定。
 ##
-# dataSource config
-spring.datasource.url=jdbc:mysql://localhost:3306/helloWorld?useSSL=false&amp;characterEncoding=UTF-8
-spring.datasource.username=helloWorld
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-# server setting
-server.address=127.0.0.1
-server.port=8080
-server.sessionTimeout=30
-server.contextPath=/demo/
-server.servletPath=/APIs/
-
-# rabbitmq (使用的spring-amqp，port默认5672，此处写5672会自动连接到rabbit-server:15672)
-mq.rabbit.host=127.0.0.1
-mq.rabbit.port=5672
-mq.rabbit.virtualHost=/
-mq.rabbit.username=guest
-mq.rabbit.password=guest
+spring.profiles.active=dev
 
 # mybatis
 mybatis.type-aliases-package=com.kyh.model
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 #mybatis.type-handlers-package=
+
+
