--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,17 @@
             <version>1.3.0</version>
         </dependency>
 
-        <!-- 热部署 -->
+        <!-- spring boot：devtools 热部署 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!-- spring boot：thymeleaf 页面模板引擎 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
         <!-- db -->
