--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,6 @@ mq.rabbit.port=5672
 mq.rabbit.virtualHost=/
 mq.rabbit.username=guest
 mq.rabbit.password=guest
+
+# thymeleaf 开发过程中，关闭其缓存
+spring.thymeleaf.cache=false
