--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # dataSource config
-spring.datasource.url=jdbc:mysql://localhost:3306/helloWorld?useSSL=false&amp;characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/helloWorld?Unicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=helloWorld
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
