spring boot redis + logback

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!-- spring boot：redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!-- db -->
         <dependency>
             <groupId>org.flywaydb</groupId>
