--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,10 @@ mybatis.type-aliases-package=com.kyh.model
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 #mybatis.type-handlers-package=
 
+# log (默认加载logback.xml。但是此处为了使用日志扩展，改名logback-spring.xml，需要指定日志配置文件路径)
+logging.config=classpath:logback-spring.xml
+
+# aop (使用cglib实现，默认jdk)
+spring.aop.proxy-target-class=true
+
 
