--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <!-- spring boot：mongodb -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
         <!-- db -->
         <dependency>
             <groupId>org.flywaydb</groupId>
