--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,3 +28,10 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
+
+# mongodb (如果不配置，默认保存在test数据库)
+# 指定用户密码和数据库。（先在mongodb中创建用户，并配置权限）
+# spring.data.mongodb.uri=mongodb://name:pass@localhost:27017/dbName
+# 多个IP集群可以采用以下配置：
+# spring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database、
+
