Actuator特性的使用

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -33,5 +33,8 @@ spring.redis.pool.max-wait=-1
 # 指定用户密码和数据库。（先在mongodb中创建用户，并配置权限）
 # spring.data.mongodb.uri=mongodb://name:pass@localhost:27017/dbName
 # 多个IP集群可以采用以下配置：
-# spring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database、
+# spring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database
+
+# 关闭验证，使用各种Actuator特性：/health 健康状况; /mappings 获取所有url映射; /metrics 显示应用性能指标
+management.security.enabled=false
 
