--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,3 +38,13 @@ spring.redis.pool.max-wait=-1
 # 关闭验证，使用各种Actuator特性：/health 健康状况; /mappings 获取所有url映射; /metrics 显示应用性能指标
 management.security.enabled=false
 
+# mail (password是授权密码)
+spring.mail.host=smtp.qq.com
+spring.mail.username=1032316751@qq.com
+spring.mail.password=upqgdcsfrwafbfce
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+# 以谁来发送邮件
+mail.fromMail.addr=1032316751@qq.com
+
