spring session (session共享，redis存储) + 修改logout,清理redis

--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,15 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- spring boot：redis -->
+        <!-- spring boot：redis (spring-boot-starter-redis 弃用) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!-- session shared -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
         </dependency>
 
         <!-- spring boot：aop -->
