--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,6 +21,9 @@ mq.rabbit.password=guest
 # thymeleaf 开发过程中，关闭其缓存
 spring.thymeleaf.cache=false
 
+# spring session
+spring.session.store-type=redis
+
 # redis
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -47,4 +50,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 # 以谁来发送邮件
 mail.fromMail.addr=1032316751@qq.com
+
 
