--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,16 @@ logging.config=classpath:logback-spring.xml
 # aop (使用cglib实现，默认jdk)
 spring.aop.proxy-target-class=true
 
+# pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+# 通过设置pageSize=0或者RowBounds.limit=0就会查询出全部的结果。
+pagehelper.page-size-zero=true
+# 支持startPage(Object params)方法，用于从对象中根据属性名取值。不配置时，默认值为pageNum=pageNum;pageSize=pageSize;count=countSql;reasonable=reasonable;pageSizeZero=pageSizeZero
+#pagehelper.params=count=countSql
+# 支持通过 Mapper 接口参数来传递分页参数
+#pagehelper.supportMethodsArguments=true
+
+
+
 
