--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
             <version>1.1.1</version>
         </dependency>
 
+        <!-- stateMachine -->
+        <dependency>
+            <groupId>org.springframework.statemachine</groupId>
+            <artifactId>spring-statemachine-core</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
+
         <!-- db -->
         <dependency>
             <groupId>org.flywaydb</groupId>
