--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 ##
 # Spring Boot最大的特色是“约定优先配置”。但是有时需要特定配置，application.properties会覆盖默认约定。
 ##
-spring.profiles.active=dev
+spring.profiles.active=prod
+
+# server setting
+server.address=127.0.0.1
+server.port=8080
+server.sessionTimeout=30
+server.contextPath=/demo/
+server.servletPath=/APIs/
+
+# spring session
+spring.session.store-type=redis
 
 # mybatis
 mybatis.type-aliases-package=com.kyh.model
@@ -22,6 +32,16 @@ pagehelper.page-size-zero=true
 #pagehelper.params=count=countSql
 # 支持通过 Mapper 接口参数来传递分页参数
 #pagehelper.supportMethodsArguments=true
+
+# mail (password是授权密码)
+spring.mail.host=smtp.qq.com
+spring.mail.username=1032316751@qq.com
+spring.mail.password=upqgdcsfrwafbfce
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+# 以谁来发送邮件
+mail.fromMail.addr=1032316751@qq.com
 
 
 
