--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,8 @@
 # dataSource config
 spring.datasource.url=jdbc:mysql://localhost:3306/helloWorld?Unicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-spring.datasource.username=helloWorld
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=kong
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-# server setting
-server.address=127.0.0.1
-server.port=8080
-server.sessionTimeout=30
-server.contextPath=/demo/
-server.servletPath=/APIs/
 
 # rabbitmq (使用的spring-amqp，port默认5672，此处写5672会自动连接到rabbit-server:15672)
 mq.rabbit.host=127.0.0.1
@@ -18,14 +11,8 @@ mq.rabbit.virtualHost=/
 mq.rabbit.username=guest
 mq.rabbit.password=guest
 
-# thymeleaf 开发过程中，关闭其缓存
-spring.thymeleaf.cache=false
-
-# spring session
-spring.session.store-type=redis
-
 # redis
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
@@ -38,17 +25,9 @@ spring.redis.pool.max-wait=-1
 # 多个IP集群可以采用以下配置：
 # spring.data.mongodb.uri=mongodb://user:pwd@ip1:port1,ip2:port2/database
 
+# thymeleaf 开发过程中，关闭其缓存
+spring.thymeleaf.cache=false
+
 # 关闭验证，使用各种Actuator特性：/health 健康状况; /mappings 获取所有url映射; /metrics 显示应用性能指标
 management.security.enabled=false
-
-# mail (password是授权密码)
-spring.mail.host=smtp.qq.com
-spring.mail.username=1032316751@qq.com
-spring.mail.password=upqgdcsfrwafbfce
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-# 以谁来发送邮件
-mail.fromMail.addr=1032316751@qq.com
-
 
