adding project local maven repo

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,15 @@
 
     </dependencies>
 
+    <repositories>
+        <!--other repositories if any-->
+        <repository>
+            <id>project.local</id>
+            <name>project</name>
+            <url>file:${project.basedir}/repo</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
