--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##
 # Spring Boot最大的特色是“约定优先配置”。但是有时需要特定配置，application.properties会覆盖默认约定。
 ##
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # server setting
 server.address=127.0.0.1
