--- a/pom.xml
+++ b/pom.xml
@@ -92,10 +92,10 @@
         </dependency>
 
         <!-- spring boot：mongodb -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-data-mongodb</artifactId>-->
+        <!--</dependency>-->
 
         <!-- spring boot：mail -->
         <dependency>
