--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,15 @@
 # dataSource config
-spring.datasource.url=jdbc:mysql://localhost:3306/helloWorld?Unicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-spring.datasource.username=root
-spring.datasource.password=kong
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.primary.url=jdbc:mysql://localhost:3306/helloWorld?Unicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.primary.username=root
+spring.datasource.primary.password=kong
+spring.datasource.primary.driverClassName=com.mysql.jdbc.Driver
+
+spring.datasource.secondary.url=jdbc:mysql://localhost:3306/helloWorld2?Unicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.secondary.username=root
+spring.datasource.secondary.password=kong
+spring.datasource.secondary.driverClassName=com.mysql.jdbc.Driver
+
+fw.db.enabled=true
 
 # rabbitmq (使用的spring-amqp，port默认5672，此处写5672会自动连接到rabbit-server:15672)
 mq.rabbit.host=127.0.0.1
