--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ server.servletPath=/APIs/
 spring.session.store-type=redis
 
 # mybatis
-mybatis.type-aliases-package=com.kyh.model
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+#mybatis.type-aliases-package=com.kyh.model
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 # log (默认加载logback.xml。但是此处为了使用日志扩展，改名logback-spring.xml，需要指定日志配置文件路径)
 logging.config=classpath:logback-spring.xml
