--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,11 @@
         </dependency>
 
         <!-- db -->
-        <!--<dependency>-->
-            <!--<groupId>org.flywaydb</groupId>-->
-            <!--<artifactId>flyway-core</artifactId>-->
-            <!--<version>4.1.2</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.1.2</version>
+        </dependency>
         <dependency> <!-- 5.1.6 集成 atomikos报错 -->
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
