rabbitmq-cosole-1.3.0 ==>  rabbitmq-cosole-1.4.0-SNAPSHOT（自动化配置，扫描、注入、使用）

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,11 +12,11 @@ spring.datasource.secondary.driverClassName=com.mysql.jdbc.Driver
 fw.db.enabled=true
 
 # rabbitmq (使用的spring-amqp，port默认5672，此处写5672会自动连接到rabbit-server:15672)
-mq.rabbit.host=127.0.0.1
-mq.rabbit.port=5672
-mq.rabbit.virtualHost=/
-mq.rabbit.username=guest
-mq.rabbit.password=guest
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtualHost=/
 
 # redis
 spring.redis.host=127.0.0.1
