--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,11 +5,11 @@ spring.datasource.password=kong
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # rabbitmq (使用的spring-amqp，port默认5672，此处写5672会自动连接到rabbit-server:15672)
-mq.rabbit.host=10.2.1.93
-mq.rabbit.port=5672
-mq.rabbit.virtualHost=/
-mq.rabbit.username=admin
-mq.rabbit.password=admin
+spring.rabbitmq.host=10.2.1.93
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.virtualHost=/
 
 # redis
 spring.redis.host=10.2.1.93
