--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,28 @@
             <version>1.4.0</version>
         </dependency>
 
+
+        <!-- elasticsearch 核心库 -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>6.2.4</version>
+        </dependency>
+
+        <!-- elasticsearch: java api - transport client-->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>6.2.4</version>
+        </dependency>
+
+        <!-- elasticsearch: java rest high api -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>6.2.4</version>
+        </dependency>
+
         <!-- common -->
         <dependency>
             <groupId>junit</groupId>
